apps/tauri/src-tauri/src/sealed_kernel/ffi.rs

    pub(super) fn sealed_kernel_bridge_create_folder(
        session: *mut SealedKernelBridgeSession,
        folder_rel_path_utf8: *const c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_delete_entry(
        session: *mut SealedKernelBridgeSession,
        target_rel_path_utf8: *const c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_rename_entry(
        session: *mut SealedKernelBridgeSession,
        source_rel_path_utf8: *const c_char,
        new_name_utf8: *const c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_move_entry(
        session: *mut SealedKernelBridgeSession,
        source_rel_path_utf8: *const c_char,
        dest_folder_rel_path_utf8: *const c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
}
